--- a/public/index/index.html
+++ b/public/index/index.html
@@ -33,7 +33,9 @@
     </div>
    <!-- <iframe src="CommonFiles/header.html" width="100%" height="55vh" frameborder="0"></iframe> -->
    <div id="imported-content-placeholder"></div>
-   
+   <div class="MyDetails">
+
+
    <div class="card" data-aos="fade-right" style="width: 15rem;margin-top: 4% ;">
       <img src="ImgAsset/MyProfilePhoto.jpg" style="padding: 4px;" class="card-img-top" alt="image is not available">
       <div class="card-body">
@@ -44,14 +46,14 @@
             <a href="ImgAsset/ArnabCV.pdf" class="btn btn-success fw-bold text-warning" >Check My Resume</a>
       </div>
    </div>
-   <p class="mt-5 fs-2" ><b>I am generally known to everyone for some of my qualities like :- </b></p>
+   <p style="margin-top: 60px;" class="fs-2 text-uppercase" ><b>I am widely recognized for certain qualities, including... </b></p>
    <p class="homeFirstElement fs-1 rounded"></p>
-   <div class="fs-3 fw-bolder text-center" >
+   <div class="fs-2 fw-bolder text-center text-uppercase" >
       <i class="fa-solid fa-down-long text-success fs-1"></i> 
       <span style="color: goldenrod;">My Life Motto</span>
       <i class="fa-solid fa-down-long text-success fs-1"></i>
    </div>
-      
+</div>
    <div class="Quotes">
    <div class="QuotesLine mb-4" data-aos="fade-zoom-in" style=" transform: rotateZ(-10deg);">
       Never Give Up !
@@ -66,7 +68,7 @@
       Don't afraid of <i>Problems</i> !
    </div>
 </div>
-   <div style="font-size: larger;"><b><u>MY DAY TO DAY LIFESTYLE:-</u></b></div>
+   <div style="font-size: larger;"><b>MY DAY TO DAY LIFESTYLE:-</b></div>
    <br>
    <div class="accordion mb-4" id="accordionExample">
       <div class="accordion-item">
@@ -79,7 +81,7 @@
          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
                In this range of time, I complete my breakfast and prepare for whole day scedule along with searching
-               source of my skills building.
+               source of my skills building. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur vitae quidem fugit a deserunt blanditiis magni accusantium quia? Harum quidem officia et ducimus perspiciatis sit esse culpa inventore voluptate nesciunt.
             </div>
          </div>
       </div>
@@ -92,8 +94,8 @@
          </h2>
          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               This is the most significant time of whole day. Within this time i learn,read, practice and write several
-               <b>C++</b> related work taking no break.
+               This is the most significant time of whole day. Within this time i learn,read, practice and write several ++
+               <b>C++</b> related work taking no break. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, sed deleniti. Illo sequi quibusdam perferendis? Magni laudantium autem sapiente perspiciatis, itaque voluptatibus dicta rem dolorum porro distinctio sequi deleniti consequuntur aliquam quas nihil aliquid consequatur vitae neque cupiditate? Voluptates neque officiis distinctio officia voluptas quia fugit nihil illum molestiae eligendi reprehenderit voluptate sunt ipsum obcaecati dicta culpa minima, totam voluptatem eveniet quibusdam laboriosam dolore minus architecto nobis? Debitis adipisci nesciunt rem illo veritatis perferendis, ea ut ipsa aut architecto similique culpa dolore unde labore quas voluptas beatae perspiciatis consequatur? Omnis aliquid incidunt dolor soluta dignissimos sequi fuga sint? Fugit, incidunt!
             </div>
          </div>
       </div>
@@ -107,7 +109,7 @@
          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
                The most interesting and energetic time period of mine is this as i learn Web Development and build those
-               website works enjoyfully(I never feel bore in this period).
+               website works enjoyfully(I never feel bore in this period). Lorem ipsum dolor sit amet consectetur adipisicing elit. Id sunt perferendis vero ea, eius ab sit velit neque numquam. Quam dolore laboriosam odio enim iusto quas temporibus non dicta. Mollitia minus iure ex animi dolor omnis similique officia. Aperiam facilis expedita iusto harum officiis quis fuga nam eum, excepturi voluptatum. Veritatis maiores quo eos facere optio adipisci inventore tenetur ullam. Iste libero blanditiis veritatis sed sunt praesentium eaque ex animi saepe esse explicabo similique necessitatibus, soluta asperiores velit nostrum nesciunt voluptates autem facere voluptatem at. Dignissimos perferendis cupiditate nam nostrum eligendi, cum eaque quam pariatur eveniet ullam sint error vel.
             </div>
          </div>
       </div>
