index page redesigned

--- a/public/index/CommonFiles/header.html
+++ b/public/index/CommonFiles/header.html
@@ -29,6 +29,7 @@
   <body>
     <nav
       class="NavContainer me-3 z-3 pt-2 pb-2 pe-2 ps-0"
+      id="NavContainer"
       style="overflow-y: hidden !important"
     >
       <div class="d-flex justify-content-between">
@@ -56,11 +57,7 @@
             <a class="NavAnchor" href="#foot">Contact</a>
           </li>
         </ul>
-        <button
-          onclick="NavButton(this)"
-          class="NavBtn rounded"
-          style="display: none"
-        >
+        <button onclick="NavButton(this)" class="NavBtn rounded">
           <i class="fa-solid fa-bars"></i>
         </button>
       </div>
