resume changed and skills part of index page chnaged

--- a/public/Career/CommonFiles/footer.html
+++ b/public/Career/CommonFiles/footer.html
@@ -81,22 +81,33 @@
         </div>
       </div>
     </div>
-    <div class="footLogo d-flex flex-row justify-content-center">
-      <a href="https://www.facebook.com/arya.sengupta.714"
-        ><img src="ImgAsset/FacebookLogo.png" height="50px" width="50px"
-      /></a>
-      <a style="margin-top: 4px" href="https://www.instagram.com/arnab_tech.01/"
-        ><img src="ImgAsset/InstaLogo.png" height="40px" width="50px"
-      /></a>
-      <a
-        style="margin: 6px 8px 0px 10px"
-        class="linkedin"
-        href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"
-        ><img src="ImgAsset/linkedinLogo3.jpg" height="34px" width="32px"
-      /></a>
-      <a style="margin: 5px 0px 0px 10px" href="https://github.com/ArnabKundu10"
-        ><img src="ImgAsset/github_logo2.jpg" height="33px" width="31px"
-      /></a>
+    <div class="d-flex flex-column text-center pt-4">
+      <div class="d-flex flex-column flex-md-row justify-content-center">
+        <p class="me-4">
+          <i class="fs-5 text-white fa-solid fa-phone-volume"></i>
+          Call Me: <a class="same-hover text-white" href="tel:+919804644765"> +91 9804644765</a> 
+        </p>
+        <p class="ms-4">
+          <i class="fs-5 text-white fa-solid fa-envelope"></i>
+          Email Me: <a class="same-hover text-white" href="mailto:kunduarnab62@example.com">kunduarnab62@example.com</a>
+        </p>
+      </div>
+      <div class="footLogo d-flex flex-row justify-content-center">
+        <a class="ms-2 me-2" href="https://www.facebook.com/arya.sengupta.714"
+          ><i class="fs-1 text-white fa-brands fa-facebook same-hover"></i></a>
+        <a class="ms-2 me-2" href="https://www.instagram.com/arnab_tech.01/"
+          ><i class="same-hover fs-1 text-white fa-brands fa-square-instagram"></i></a>
+        <a class="ms-2 me-2"
+          class="linkedin"
+          href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"
+          ><i class="same-hover fs-1 text-white fa-brands fa-linkedin"></i></a>
+        <a class="ms-2 me-2" href="https://github.com/ArnabKundu10"
+          ><i class="same-hover fs-1 text-white fa-brands fa-square-github"></i></a>
+      </div>
+  
+      <p class="text-light text-center text-warning">
+        © 2023 Arnab Kundu. All rights reserved.
+      </p>
     </div>
 
     <p class="text-light text-center text-warning">
