--- a/public/index/index.html
+++ b/public/index/index.html
@@ -236,7 +236,7 @@
          </div>
           
          <div class="meditate text-center" >
-            <img style="width: 35%;" src="ImgAsset/portfolio-meditation.png" alt="">
+            <img class="col-md-4 col-10" src="ImgAsset/portfolio-meditation.png" alt="">
          </div>
       </div>
 </div>
@@ -257,7 +257,7 @@
          </div>
         <div class="align-self-center col-md-4 col-12">
          <p class="fs-4">
-            Excited to sha id="circular"re my latest: a React.js powered movie website, integrating diverse
+            Excited to share my latest: a React.js powered movie website, integrating diverse
             APIs for a dynamic experience. React Routes guide users through a cinematic journey,
             while hooks like useState, useEffect enhance interactivity. With captivating carousels,
             it’s a seamless blend of tech and art, offering immersive enlightenment.            
