add more projects

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -54,7 +54,7 @@
             <p class="card-text" style="font-style: italic;">Hi, I am Arnab Kundu from West Bengal, India and a student
                of Kalyani Government
                Engineering College.<b>Explore My Profile</b></p>
-            <a href="ImgAsset/ArnabCV.pdf" class="btn btn-success fw-bold text-warning" >Check My Resume</a>
+            <a href="ImgAsset/Arnab-Kundu-CV.pdf" class="btn btn-success fw-bold text-warning" >Check My Resume</a>
       </div>
    </div>
    <div class="background-line2 align-self-center"></div>
@@ -253,24 +253,71 @@
     <div class=" d-flex flex-column w-100 pt-4 pb-4">
       <div style="padding-top: 50px; padding-bottom: 100px;" class="project d-flex flex-column flex-md-row w-100 justify-content-between">
          <div class="col-md-6 col-12 align-self-center mb-4 mb-md-0">
-            <img  class="project-img w-100 rounded" src="./ImgAsset/movie-mafia.png" alt="">
+            <img  class="project-img w-100 rounded" src="./ImgAsset/shop-bucket.png" alt="">
          </div>
         <div class="align-self-center col-md-4 col-12">
          <p class="fs-4">
-            Excited to share my latest: a React.js powered movie website, integrating diverse
-            APIs for a dynamic experience. React Routes guide users through a cinematic journey,
-            while hooks like useState, useEffect enhance interactivity. With captivating carousels,
-            it’s a seamless blend of tech and art, offering immersive enlightenment.            
+            ade a full-featured e-commerce platform with an admin panel for managing electronics products, categories, and users. Combined real-time sorting, filtering, and cart management, improving product discoverability and shopping experience.
+            Designed a scalable architecture to support future payment gateway integration and secure order processing.
+             Built a responsive UI using React.js, UseContext Hook, and Bootstrap for a seamless user experience.          
          </p>
          <p class="fs-5">
-         <b>KeySkills:- </b> ReactJs,Rest API,UseContext Hook,PostMan,BootStrap,CSS,HTML,Netlify,Project Architecture 
+         <b>KeySkills:- </b> Vite.js, Context API, Node.js, Express.js, MongoDB, REST API, Bootstrap
          </p>
          <div class="deploy-btn position-relative">
             <div class="moving-moon1 rounded-circle position-absolute"></div>
             <div class="moving-moon3 rounded-circle position-absolute"></div>
             <div class="moving-moon2 rounded-circle position-absolute"></div>
             <button class="btn go-btn rounded-pill ps-4 pe-4 pt-3 pb-3">
-               <a class="text-decoration-none text-white fs-5" target="_blank"  href="https://tranquil-starship-26fac6.netlify.app/">Deploy Link</a>
+               <a class="text-decoration-none text-white fs-5" target="_blank"  href="https://shop-bucket-99xb.vercel.app/">Deploy Link</a>
+               <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </button>
+         </div>
+        </div>
+      </div>
+      <div style="padding-top: 100px; padding-bottom: 100px;" class="project d-flex flex-column-reverse flex-md-row w-100 justify-content-between" >
+         <div class="align-self-center col-md-4 col-12">
+          <p class="fs-4">
+            Built a MERN-based job portal enabling companies to post jobs, manage applications, and track candidates.
+             Secured authentication with JWT-based login and role-based access control, ensuring restricted access.
+             Integrated email verification via Nodemailer and an automated email notification system for job updates.           
+          </p>
+          <p class="fs-5">
+          <b>KeySkills:- </b> : MERN Stack, JWT Authentication, Nodemailer, Role-Based Access Control, Tailwind CSS
+          </p>
+          <div class="deploy-btn position-relative">
+             <div class="moving-moon3 rounded-circle position-absolute"></div>
+             <div class="moving-moon2 rounded-circle position-absolute"></div>
+             <div class="moving-moon1 rounded-circle position-absolute"></div>
+             <button class="btn go-btn rounded-pill ps-4 pe-4 pt-3 pb-3">
+                <a class="text-decoration-none text-white fs-5" target="_blank" href="https://hire-hub-lwwa.vercel.app/">Deploy Link</a>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+             </button>
+          </div>
+         </div>
+         <div class="col-md-6 col-12 align-self-center mb-4 mb-md-0">
+          <img  class="project-img w-100 rounded" src="./ImgAsset/hiring-hub.png" alt="">
+       </div>
+       </div>
+       <div style="padding-top: 50px; padding-bottom: 100px;" class="project d-flex flex-column flex-md-row w-100 justify-content-between">
+         <div class="col-md-6 col-12 align-self-center mb-4 mb-md-0">
+            <img  class="project-img w-100 rounded" src="./ImgAsset/quiz.png" alt="">
+         </div>
+        <div class="align-self-center col-md-4 col-12">
+         <p class="fs-4">
+            Developed a React-based quiz app with optimized API fetching via React Query and enhanced UX with
+            gamification features.
+          Improved performance using lazy loading, code splitting, and state management via Context API.            
+         </p>
+         <p class="fs-5">
+         <b>KeySkills:- </b> React.js, React Query, Context API, Gamification, Performance Optimization 
+         </p>
+         <div class="deploy-btn position-relative">
+            <div class="moving-moon1 rounded-circle position-absolute"></div>
+            <div class="moving-moon3 rounded-circle position-absolute"></div>
+            <div class="moving-moon2 rounded-circle position-absolute"></div>
+            <button class="btn go-btn rounded-pill ps-4 pe-4 pt-3 pb-3">
+               <a class="text-decoration-none text-white fs-5" target="_blank"  href="https://arnab-quiz.netlify.app/">Deploy Link</a>
                <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </button>
          </div>
@@ -300,6 +347,31 @@
         <div class="col-md-6 col-12 align-self-center mb-4 mb-md-0">
          <img  class="project-img w-100 rounded" src="./ImgAsset/E-diary.png" alt="">
       </div>
+      </div>
+      <div style="padding-top: 50px; padding-bottom: 100px;" class="project d-flex flex-column flex-md-row w-100 justify-content-between">
+         <div class="col-md-6 col-12 align-self-center mb-4 mb-md-0">
+            <img  class="project-img w-100 rounded" src="./ImgAsset/movie-mafia.png" alt="">
+         </div>
+        <div class="align-self-center col-md-4 col-12">
+         <p class="fs-4">
+            Excited to share my latest: a React.js powered movie website, integrating diverse
+            APIs for a dynamic experience. React Routes guide users through a cinematic journey,
+            while hooks like useState, useEffect enhance interactivity. With captivating carousels,
+            it’s a seamless blend of tech and art, offering immersive enlightenment.            
+         </p>
+         <p class="fs-5">
+         <b>KeySkills:- </b> ReactJs,Rest API,UseContext Hook,PostMan,BootStrap,CSS,HTML,Netlify,Project Architecture 
+         </p>
+         <div class="deploy-btn position-relative">
+            <div class="moving-moon1 rounded-circle position-absolute"></div>
+            <div class="moving-moon3 rounded-circle position-absolute"></div>
+            <div class="moving-moon2 rounded-circle position-absolute"></div>
+            <button class="btn go-btn rounded-pill ps-4 pe-4 pt-3 pb-3">
+               <a class="text-decoration-none text-white fs-5" target="_blank"  href="https://tranquil-starship-26fac6.netlify.app/">Deploy Link</a>
+               <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </button>
+         </div>
+        </div>
       </div>
       <div style="padding-top: 100px; padding-bottom: 100px;" class="project flex-column flex-md-row d-flex w-100 justify-content-between">
          <div class="col-md-6 col-12 align-self-center">
